tests/libtracker-data/error/Makefile.am
include $(top_srcdir)/Makefile.decl

EXTRA_DIST = query-error-1.ontology \
	query-error-1.out \
	query-error-1.rq \
	query-error-1.ttl \
	query-error-2.ontology \
	query-error-2.out \
	query-error-2.rq \
	query-error-2.ttl
